Fixed reports summary spacing and border bottom.

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -20,6 +20,8 @@
 }
 .reports-table {
   @extend %table-striped;
+  border-bottom: 1px solid $light-blue;
+  margin-bottom: 70px;
   thead {
     border-bottom: 1px solid $light-blue;
   }
